--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <mrta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/main.css">
-        <title>Работа с гит</title>
+        <title>Работа с гид</title>
 </head>
 <body>
-    <p>гит + хаб</p>
+    <p>гид + хаб</p>
 </body>
 </html>
